# Khaos_old

./: .LICENSE  .clang-format  .clang-tidy  .cmake-linter.yml  .codespellrc  .editorconfig  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  README.md  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: .env  Dockcross.yml  MSVC6.0.yml  Macos.yml  Ubuntu.yml  Windows.yml  codeql.yml  pre-commit.yml  sonarcloud.yml
cmake/: KhaosConfig.cmake.in
docs/: header.tex
examples/: CMakeLists.txt  Compiler.cpp  KhaosVersion.cpp
include/Khaos/: C.h  CXX.h  CXXStandards.h  CompareVersionMacros.h  CompareVersions.h  Compiler.h  KhaosVersion.h.in  Language.h  Preprocessor.h  Version.h  VersionMacros.h
include/Khaos/details/languages/: C.h  CStandards.h  CXX.h  CXXStandards.h  Extensions.h
include/khaos/: C.h  CStandards.h  CXX.h  CXXStandards.h  CompareVersionMacros.h  KhaosVersion.h.in  Language.h  VersionMacros.h
src/: CMakeLists.txt  KhaosVersion.h.in
src/Khaos/: CMakeLists.txt  KhaosVersion.h.in
src/khaos/: CMakeLists.txt
tests/: CMakeLists.txt  CStandards.test.cpp  CXXStandards.test.cpp  CompareVersion.test.cpp  CompareVersionMacros.test.cpp  Compiler.test.cpp  KhaosVersion.test.cpp  LanguageC.test.c  LanguageCXX.test.cpp  Version.test.cpp  VersionMacros.test.cpp
